--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,18 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.roma.rpn</groupId>
-    <artifactId>ComputeCSV</artifactId>
+    <groupId>com.roma.rpn</groupId> <!-- Package name. Ex.: org.apache.maven -->
+    <artifactId>ComputeCSV</artifactId> <!-- Name of the jar file that will be generated -->
     <version>0.0.1</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <defaultGoal>install</defaultGoal>
@@ -69,15 +78,6 @@
             <!--</pluginManagement>-->
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-    </dependencies>
 
     <properties>
         <encoding>UTF-8</encoding>
